# MemPro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
MemPro/: README.md
MemPro/_shared/: evolution_workspace.py
MemPro/hotpotqa/: AGENTS.md
MemPro/hotpotqa/registry/: versions.json
MemPro/hotpotqa/scripts/: common.py  select_base.py
MemPro/hotpotqa/versions/v0000/: research_agent.py
MemPro/hotpotqa/versions/v_best/: research_agent.py  research_prompts.py
MemPro/locomo/: AGENTS.md
MemPro/locomo/registry/: versions.json
MemPro/locomo/scripts/: common.py  register_version.py  run_eval.py
MemPro/longmemeval/: AGENTS.md
MemPro/longmemeval/registry/: versions.json
MemPro/longmemeval/scripts/: common.py
MemPro/longmemeval/versions/v0000/: memory_agent.py
MemPro/narrativeqa/: AGENTS.md
MemPro/narrativeqa/registry/: versions.json
MemPro/narrativeqa/scripts/: common.py
best_versions/locomo/mempro_memory/: __init__.py
download_data/: download_file.py  download_longmemeval.py  download_narrativeqa.py
eval/: build_longmemeval_memory.py  hotpotqa_test.py  locomo_test.py  longmemeval_test.py  narrativeqa_test.py
initial_framework/agents/: research_agent.py
initial_framework/generator/: __init__.py  vllm_generator.py
initial_framework/prompts/: research_prompts.py
initial_framework/retriever/: __init__.py  base.py  dense_retriever.py
scripts/: build_longmemeval_memory.sh  download_data.sh  eval_hotpotqa.sh  eval_locomo.sh  eval_longmemeval.sh  eval_narrativeqa.sh  run_evolution.py
(+31 files in other folders)
